# boykisserfetch

./: Cargo.toml  LICENSE  README.md
boykissers/: ahhhaah.txt  cute.txt  cutie.txt  howyoulook.txt  sad.txt  sowhat.txt  squinting.txt  thesilly.txt  thesilly_large.txt  typing.txt  withhighthighs.txt  withhighthighsalt.txt  yayyy.txt  yippie.txt  youafurry.txt  youlikeboys.txt  youlikeboysfullbody.txt
src/: main.rs
src/helpers/: arguments.rs  boykissers.rs  mod.rs  paths.rs  print.rs
src/system/: host.rs  net.rs  specs.rs
